human_written_tests/WebAssembly/processed_control_flow_validation/test_block_66.wast
(assert_invalid
  (module (func $type-break-last-void-vs-nums (result i32 i32)
    (block (result i32 i32) (br 0))
  ))
  "type mismatch"
)